[project]
name = "chaostoolkit-xargs"
description = "Extra Argument for ChaosToolkit with Superpowers"
version = "0.0.1"
authors = [ { name = "Manuel Castellin" } ]
dependencies = [
    'chaostoolkit',
    'chaostoolkit-lib',
    'requests',
]

[build-system]
requires = [ "setuptools", "wheel" ]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [ "." ]
include = ["chaosxargs*"]
exclude = ["tests*"]
